--- a/less/main.less
+++ b/less/main.less
@@ -29,7 +29,11 @@
     }
    
 }
-.artist1{
+div.artist1{
+    margin-left:10%;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
     img{
     width: 75%;
     border-radius: 10px;
