--- a/less/main.less
+++ b/less/main.less
@@ -34,10 +34,16 @@ div.artist1{
     align-items: center;
     justify-content: center;
     width: 50%;
+    @media @phone{
+        width:75%;
+    }
     img{
     width: 75%;
     border-radius: 10px;
     margin: 5% 0;
+    @media @phone{
+        width:100%;
+    }
 }
 
 }
